--- a/css/global.style.css
+++ b/css/global.style.css
@@ -52,3 +52,20 @@ p.text {
   font-size: 14px;
 }
 
+@media screen and (max-width: 768px) {
+  h2.text {
+    font-size: 30px;
+    font-weight: 500;
+    margin: 17px 0;
+  }
+  h3.text {
+    font-size: 25px;
+    font-weight: 500;
+    margin: 0 0 17px 0;
+  }
+  h4.text {
+    font-size: 17px;
+    padding: 25px;
+  }
+}
+
