--- a/css/content.style.css
+++ b/css/content.style.css
@@ -67,10 +67,15 @@
 }
 
 .plat-img {
-    width: 332px;
-    height: 143px;
+    width: 100%;
     object-position: 50% 50%;
     object-fit: cover;
+}
+
+@media screen and (max-width: 768px) {
+    .platforms {
+        grid: repeat(3, 1fr) / repeat(2, 1fr);
+    }
 }
 
 @media screen and (max-width: 470px) {
