--- a/css/content.style.css
+++ b/css/content.style.css
@@ -1,5 +1,5 @@
 .main {
-    padding: calc(4vw + 24px);
+    padding: calc(2vw);
     background: var(--black);
 }
 
@@ -38,7 +38,7 @@
     width: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: center;
 }
 
 .row.rev .row-text {
@@ -116,6 +116,9 @@
     .dlc-text {
         width: 280px;
     }
+    .dlc-fig {
+        padding: 0;
+    }
 }
 
 @media screen and (max-width: 470px) {
@@ -133,5 +136,11 @@
     }
     .row-img {
         width: 100%;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .main {
+        padding: 3vw;
     }
 }
