fix: btn's width and dlc's img responsiveness

--- a/css/content.style.css
+++ b/css/content.style.css
@@ -112,7 +112,7 @@
         margin: 17px 0;
     }
     .dlc-img {
-        width: 280px;
+        width: fit-content;
     }
     .dlc-text {
         width: 280px;
@@ -143,5 +143,9 @@
 @media screen and (max-width: 320px) {
     .main {
         padding: 3vw;
+    }
+    .dlc-img,
+    .dlc-text {
+        width: 100%;
     }
 }
