--- a/css/global.style.css
+++ b/css/global.style.css
@@ -52,10 +52,15 @@ p.text {
 }
 
 .anch {
-  display: flex
-  ;
+  display: flex;
   background: var(--white);
   padding: 17px;
+  width: fit-content;
+  transition: all .25s ease-in-out;
+}
+
+.anch:hover {
+  opacity: .5;
 }
 
 .anch .text {
